<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_weight="0.60">

        <VideoView
            android:id="@+id/movie_poster"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="350dp"
            android:padding="16dp"
            android:background="#80000000">

            <TextView
                android:id="@+id/movie_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:textColor="#ffffff"
                android:text="@string/movie_title_text"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/movie_tagline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_tagline"
                android:textColor="#ffffff"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_title_text" />

            <TextView
                android:id="@+id/movie_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_language"
                android:textColor="#ffffff"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_tagline" />

            <TextView
                android:id="@+id/movie_genres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_genres"
                android:textColor="#ffffff"
                app:layout_constraintTop_toBottomOf="@+id/movie_language"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/movie_budget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_budget"
                android:textColor="#ffffff"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/movie_genres" />

            <TextView
                android:id="@+id/release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/release_date"
                android:layout_marginTop="6dp"
                android:textColor="#ffffff"
                android:layout_marginStart="6dp"
                app:layout_constraintLeft_toRightOf="@+id/movie_title_text"
                app:layout_constraintTop_toTopOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loading_animation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_fileName="preloader.json"/>

</LinearLayout>