<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/movie_list"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@android:drawable/ic_dialog_alert"
            android:id="@+id/movie_image"
            android:layout_width="120dp"
            android:layout_height="80dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_title"
            app:layout_constraintLeft_toRightOf="@+id/movie_image"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/movie_vote_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/movie_title"
            android:text="@string/vote_count"
            app:layout_constraintLeft_toRightOf="@+id/movie_image" />

        <TextView
            android:id="@+id/movie_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/movie_description"
            android:maxLines="2"
            app:layout_constraintTop_toBottomOf="@+id/movie_vote_count"
            app:layout_constraintLeft_toRightOf="@+id/movie_image" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_grey"
            app:layout_constraintTop_toBottomOf="@+id/movie_list"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>